// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. multiple ad slots 1`] = `
<style>
{
  "IS1": {
    "height": "auto",
    "overflow": "hidden",
    "width": 970,
  },
  "IS2": {
    "alignItems": "center",
    "flex": 1,
  },
  "IS3": {
    "height": "auto",
    "overflow": "hidden",
    "width": 1,
  },
  "IS4": {
    "alignItems": "center",
    "flex": 1,
  },
  "IS5": {
    "height": "auto",
    "overflow": "hidden",
    "width": 970,
  },
  "IS6": {
    "alignItems": "center",
    "flex": 1,
  },
}
</style>

<AdComposer>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="header"
  >
    <View
      className="IS2"
    >
      <div>
        <DOMContext
          baseUrl="https://www.thetimes.co.uk/"
          height={250}
          width={970}
        >
          <div
            className="IS1"
          />
        </DOMContext>
      </div>
    </View>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="pixel"
  >
    <View
      className="IS4"
    >
      <div>
        <DOMContext
          baseUrl="https://www.thetimes.co.uk/"
          height={1}
          width={1}
        >
          <div
            className="IS3"
          />
        </DOMContext>
      </div>
    </View>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="intervention"
  >
    <View
      className="IS6"
    >
      <div>
        <DOMContext
          baseUrl="https://www.thetimes.co.uk/"
          height={250}
          width={970}
        >
          <div
            className="IS5"
          />
        </DOMContext>
      </div>
    </View>
  </Ad>
</AdComposer>
`;

exports[`2. placeholder when isloading 1`] = `
<style>
{
  "IS1": {
    "left": 0,
    "position": "absolute",
    "top": 0,
  },
  "IS2": {
    "backgroundColor": "#F9F9F9",
    "borderColor": "#DBDBDB",
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "#696969",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 11,
    "letterSpacing": 1.5,
    "lineHeight": 15,
    "paddingBottom": "5px",
    "paddingLeft": "10px",
    "paddingRight": "10px",
    "paddingTop": "5px",
    "zIndex": 1,
  },
  "IS3": {
    "height": "250px",
    "width": "970px",
  },
  "IS4": {
    "alignItems": "center",
    "backgroundColor": "#F9F9F9",
    "borderColor": "#DBDBDB",
    "borderStyle": "solid",
    "borderWidth": 1,
    "height": 250,
    "justifyContent": "center",
    "overflow": "hidden",
    "width": 970,
  },
  "IS5": {
    "alignItems": "center",
    "flex": 1,
    "justifyContent": "center",
  },
  "IS6": {
    "flex": 1,
  },
  "IS7": {
    "alignItems": "center",
    "flex": 1,
  },
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={true}
  section="news"
  slotName="header"
>
  <View
    className="IS7"
  >
    <div>
      <AdPlaceholder
        className="IS6"
        height={250}
        width={970}
      >
        <View
          className="IS5"
        >
          <div>
            <View
              className="IS4"
              testID="ad-placeholder"
            >
              <div
                className="IS3"
                data-testid="ad-placeholder"
              >
                <View
                  className="IS1"
                >
                  <div>
                    <Watermark
                      height={250}
                      viewBox="-630 120 1200 50"
                      width={970}
                    />
                  </div>
                </View>
                <Text
                  className="IS2"
                >
                  <div>
                    ADVERTISEMENT
                  </div>
                </Text>
              </div>
            </View>
          </div>
        </View>
      </AdPlaceholder>
    </div>
  </View>
</Ad>
`;

exports[`3. nothing if there is an error in the loading of scripts 1`] = `
<style>
{
  "IS1": {
    "height": "auto",
    "overflow": "hidden",
    "width": 0,
  },
  "IS2": {
    "left": 0,
    "position": "absolute",
    "top": 0,
  },
  "IS3": {
    "backgroundColor": "#F9F9F9",
    "borderColor": "#DBDBDB",
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "#696969",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 11,
    "letterSpacing": 1.5,
    "lineHeight": 15,
    "paddingBottom": "5px",
    "paddingLeft": "10px",
    "paddingRight": "10px",
    "paddingTop": "5px",
    "zIndex": 1,
  },
  "IS4": {
    "height": "250px",
    "width": "970px",
  },
  "IS5": {
    "alignItems": "center",
    "backgroundColor": "#F9F9F9",
    "borderColor": "#DBDBDB",
    "borderStyle": "solid",
    "borderWidth": 1,
    "height": 250,
    "justifyContent": "center",
    "overflow": "hidden",
    "width": 970,
  },
  "IS6": {
    "alignItems": "center",
    "flex": 1,
    "justifyContent": "center",
  },
  "IS7": {
    "flex": 1,
  },
  "IS8": {
    "alignItems": "center",
    "flex": 1,
  },
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={false}
  section="news"
  slotName="header"
>
  <View
    className="IS8"
  >
    <div>
      <DOMContext
        baseUrl="https://www.thetimes.co.uk/"
        height={0}
        width={0}
      >
        <div
          className="IS1"
        />
      </DOMContext>
      <AdPlaceholder
        className="IS7"
        height={250}
        width={970}
      >
        <View
          className="IS6"
        >
          <div>
            <View
              className="IS5"
              testID="ad-placeholder"
            >
              <div
                className="IS4"
                data-testid="ad-placeholder"
              >
                <View
                  className="IS2"
                >
                  <div>
                    <Watermark
                      height={250}
                      viewBox="-630 120 1200 50"
                      width={970}
                    />
                  </div>
                </View>
                <Text
                  className="IS3"
                >
                  <div>
                    ADVERTISEMENT
                  </div>
                </Text>
              </div>
            </View>
          </div>
        </View>
      </AdPlaceholder>
    </div>
  </View>
</Ad>
`;
